-
Bug
-
Resolution: Done
-
P1: Critical
-
5.15.0
-
None
-
-
3
-
7615656ced26a132c6894c080563e74d503be3c7 (qt/qttools/dev) b9142ba7617b183b90741e00cde7a50877449d08 (qt/qttools/5.15)
-
Da Vinci sprint 15, Da Vinci sprint 16
When clicking on the entries for QBasicAtomicInteger, QBasicAtomicPointer or QBasicMutex in the Index of the Assistant the Help page of "The Animation Framework" is shown. This is also reproducible when opening the context help in Qt Creator.
| For Gerrit Dashboard: QTBUG-86101 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 310659,5 | qdoc: Skip ignored entries in .qhp | dev | qt/qttools | Status: MERGED | +2 | 0 |
| 312311,3 | qdoc: Skip ignored entries in .qhp | 5.15 | qt/qttools | Status: MERGED | +2 | 0 |