qdoc: Skip ignored entries in .qhp

Classes marked with \dontdocument do not generate a class reference
page. Skip them when generating the Qt Help project file.

Fixes: QTBUG-86101
Change-Id: Ica80b505f1f23de0dd0ae59272903e1d19eadf93
Reviewed-by: Topi Reiniö <topi.reinio@qt.io>
(cherry picked from commit 7615656ced26a132c6894c080563e74d503be3c7)